Added and Updated Student Profile

--- a/Views/Students/Index.cshtml
+++ b/Views/Students/Index.cshtml
@@ -1,19 +1,1 @@
-@model IEnumerable<SES.Models.Student>
-    <h2>Students</h2>
-    <table class="table">
-        <thead><tr><th>Name</th><th>Since</th><th>Courses</th><th></th></tr></thead>
-        <tbody>
-            @foreach (var s in Model)
-{
-            <tr>
-                <td>@s.LastName, @s.FirstName</td>
-                <td>@s.DateCreated.ToShortDateString()</td>
-                <td>@s.Enrollments.Count</td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@s.Id">Edit</a> |
-                    <a asp-action="Delete" asp-route-id="@s.Id">Delete</a>
-                </td>
-            </tr>
-}
-        </tbody>
-    </table>
+<p>Nothing to see here</p>
