--- a/Views/Students/Profile.cshtml
+++ b/Views/Students/Profile.cshtml
@@ -12,8 +12,10 @@
                 <span class="d-sm-none">Portal</span>
             </a>
 
-            <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#studentNavigation">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#studentNavigation">
+                <span class="navbar-toggler-icon">
+                    <div></div>
+                </span>
             </button>
 
             <div class="collapse navbar-collapse" id="studentNavigation">
